Notify user that BLASTp results visualisation is not exact (#485) - BLASTp notification implemented Datasets panel: styling (overlapping text fixed)

--- a/client/client/app/components/ngbDataSets/ngbDataSets.scss
+++ b/client/client/app/components/ngbDataSets/ngbDataSets.scss
@@ -38,6 +38,7 @@ $folder-line: #cccccc;
   text-align: center;
   border-radius: 3px;
   border: 1px solid darken($unselected-color, 10%);
+  overflow: hidden;
 
   &.selected {
     background-color: $selected-color;
