--- a/client/client/app/components/ngbTracksView/ngbTrackNotification/ngbTrackNotification.scss
+++ b/client/client/app/components/ngbTracksView/ngbTrackNotification/ngbTrackNotification.scss
@@ -6,6 +6,7 @@
   overflow: visible;
   display: none;
   font-size: small;
+  max-width: 33%;
 
   &.visible {
     display: block;
